
Change Log Update (00.00.13)
* 2016-03-15
+ Cleaned up some Menu System Items
+ Need to add startup to matrix, and test for configuration value if it's enabled.
+ Start building out matrix menu, and new user application next!

Change Log Update (00.00.12)
* 2016-03-13
+ Config file will auto generate with defaults if it doesn't exist.
+ Using new Config Class and DAO to read config file. Remove references to Config.BBS
  which wasn't being used.
+ Telnet and SSL Sockets listeners are now swapped depending on configuration settings.
* 2016-03-14
+ Reworked the Configuration a bit more, removed passing configurations though the servers to the sessions
  This could cause sessions to stick with smart pointers, instead worked it into the Global Communicator
  Which will pass back a weak pointer of the config anytime it's needed since it's global and static.
+ Also added mutex and lock guards to the configuration.

Change Log Update (00.00.11)
* 2016-03-13 Long Break is Over
+ Started laying out Database Tables, decided to stick with custom version of SqliteWrapped.
* SqliteWrapped:
+ Makes lots of updates and have been rewriting SqliteWrapped to work a little 
  easer with classes and help make some ORM related adjustments for pulling data 
  in and out of classes easier.
+ Added transactional inserts, updates, and creates, failures can no be rolled back
  and makes for quicker inserts of large data sets, and also creating tables and indexes together.
* XRM: 
+ Created a new Data Sub folder and initial data classes for Config and Users.
  Also created Config_Dao, and Users_Dao which will maintain the API for reading and writing data.
+ Config file is setup as a serialization class that will read and write to an XML file.
+ Users is setup to use the custom SQLite Wrappers API and updated features and methods.
- Work has been a little start as my time is still limited.  I have to rip out allot of the 